Added mock nav-bar items for demo

--- a/web/asset/asset.css
+++ b/web/asset/asset.css
@@ -27,6 +27,6 @@ asset-details /deep/ .content {
   margin-left: 300px;
 }
 
-core-drawer-panel[narrow] > div[drawer] {
+core-drawer-panel[narrow] > nav-bar {
 	background-color: cadetblue;
 }
